--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 
 [metadata]
-name = graphql-ws
-version = 0.3.1
-description = Websocket server for GraphQL subscriptions
+name = graphql-ws-subs
+version = 0.1.0
+description = Websocket server for GraphQL subscriptions that includes pubsub implementation from hballard
 long_description = file: README.rst, CHANGES.rst
 author = Syrus Akbary
 author_email = me@syrusakbary.com
-url = https://github.com/graphql-python/graphql-ws
+url = https://github.com/cjayroe/graphql-ws
 keywords = graphql, subscriptions, graphene, websockets
 license = MIT
 classifiers =
@@ -34,7 +34,7 @@ install_requires =
 
 [options.packages.find]
 include =
-    graphql_ws
+    graphql_ws_subs
 
 [options.extras_require]
 maintainer =
